<resources>
    <string name="app_name">MyMenu_HW</string>
    <string name="registration">Registration</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="save">Save</string>
    <string name="small_menu">Small menu</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>

    <string name="drawer_cloce">Close Drawer</string>
    <string name="drawer_open">Open Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>